addreww code reivew comments replace magic number with const fix activity selection drag add proper drag previews to all types fix dark mode issues

--- a/assets/src/components/content/add_resource_content/AddResourceContent.modules.scss
+++ b/assets/src/components/content/add_resource_content/AddResourceContent.modules.scss
@@ -130,12 +130,8 @@
     color: lightgray;
   }
 
-  :global(.type-icon) {
-    font-size: 26px;
-  }
-
   :global(.type-label) {
-    color: black;
+    color: authoring.$body-color;
     font-size: 1.1em;
     font-weight: 600;
   }
@@ -146,6 +142,7 @@
   }
 
   :global(.type-description) {
+    color: authoring.$body-color;
     font-size: 0.9em;
   }
 }
